// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getResorts should call setError when resourceFetcher was called and no data was fetched 1`] = `
Array [
  Object {
    "error": [Error: Something went wrong ...],
    "type": "resorts/SET_ERROR",
  },
]
`;

exports[`getResorts should call setIsLoading when dispatch was called first time 1`] = `
Array [
  Object {
    "type": "resorts/IS_LOADING",
  },
]
`;

exports[`getResorts should call setResorts when all data is fetched 1`] = `
Array [
  Object {
    "payload": Object {
      "byId": Object {
        "1": Object {
          "city": "Ustroń",
          "cityId": 7531846,
          "coordinates": Object {
            "lat": 49.6833162,
            "lng": 18.8196089,
          },
          "id": 1,
          "name": "Czantoria",
          "piste": Array [
            Object {
              "id": 1,
              "name": "red",
              "number": 1,
            },
            Object {
              "id": 2,
              "name": "blue",
              "number": 2,
            },
          ],
        },
        "2": Object {
          "city": "Karlików",
          "cityId": 7531370,
          "coordinates": Object {
            "lat": 49.43529,
            "lng": 22.067767,
          },
          "id": 2,
          "name": "Karlików",
          "piste": Array [
            Object {
              "id": 1,
              "name": "Mała Palenica",
              "number": 1,
            },
          ],
        },
        "3": Object {
          "city": "Szczyrk",
          "cityId": 7532564,
          "coordinates": Object {
            "lat": 49.6685428,
            "lng": 18.9609749,
          },
          "id": 3,
          "name": "Biały Krzyż\\"",
          "piste": Array [
            Object {
              "id": 1,
              "name": "red",
              "number": 1,
            },
            Object {
              "id": 2,
              "name": "green",
              "number": 2,
            },
          ],
        },
      },
      "list": Array [
        1,
        2,
        3,
      ],
      "pageCount": 1,
    },
    "type": "resorts/SET_RESORTS",
  },
]
`;

exports[`getSpecificResort should call setError when resourceFetcher was called and no data was fetched 1`] = `
Array [
  Object {
    "error": [Error: Something went wrong ...],
    "type": "resorts/SET_ERROR",
  },
]
`;

exports[`getSpecificResort should call setIsLoading when dispatch was called first time 1`] = `
Array [
  Object {
    "type": "resorts/IS_LOADING",
  },
]
`;

exports[`getSpecificResort should call setSpecificResort if resort is not in state and data is fetched 1`] = `
Array [
  Object {
    "payload": Object {
      "byId": Object {
        "2": Object {
          "city": "Karlików",
          "cityId": 7531370,
          "coordinates": Object {
            "lat": 49.43529,
            "lng": 22.067767,
          },
          "id": 2,
          "name": "Karlików",
          "piste": Array [
            Object {
              "id": 1,
              "name": "Mała Palenica",
              "number": 1,
            },
          ],
        },
      },
    },
    "type": "resorts/SET_RESORT",
  },
]
`;
